src/test/resources/private/typechecking/pass/method_invocation/method_params_01.jova
class Class1 {
    private int test1(int x){
        return 1;
    }

    public int test2(int x) {
        return test1(x);
    }
}



