src/test/resources/private/typechecking/fail/unknown/fail06_unknownClassAsCtor.jova
class Test {
    public Unknown func() {
        Test t;
        t = new Unknown;
        return nix;
    }
}